--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,8 @@
         "laravel/framework": "^8.0",
         "laravel/tinker": "^2.0",
         "laravel/ui": "^3.4",
+        "laraveldaily/laravel-invoices": "^2.0",
+        "maatwebsite/excel": "^3.1",
         "twilio/sdk": "^6.43"
     },
     "require-dev": {
