order add new feature and logic

--- a/.env.example
+++ b/.env.example
@@ -48,3 +48,9 @@ MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 TWILIO_WHATSAPP_FROM=
 TWILIO_ACCOUNT_SID=
 TWILIO_AUTH_TOKEN=
+
+DOWN_PAYMENT_AMOUNT=
+
+XENDIT_CALLBACK=
+XENDIT_API=
+XENDIT_URL=
