--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
         "laravel/ui": "^3.4",
         "laraveldaily/laravel-invoices": "^2.0",
         "maatwebsite/excel": "^3.1",
-        "twilio/sdk": "^6.43"
+        "twilio/sdk": "^6.43",
+        "xendit/xendit-php": "^2.19"
     },
     "require-dev": {
         "facade/ignition": "^2.3.6",
