--- a/.env.example
+++ b/.env.example
@@ -49,7 +49,7 @@ TWILIO_WHATSAPP_FROM=
 TWILIO_ACCOUNT_SID=
 TWILIO_AUTH_TOKEN=
 
-DOWN_PAYMENT_AMOUNT=
+DOWN_PAYMENT_AMOUNT=20000
 
 XENDIT_CALLBACK=
 XENDIT_API=
